--- a/DeploymentTests.cabal
+++ b/DeploymentTests.cabal
@@ -27,6 +27,7 @@ library
   build-depends: base                       >= 4.7    &&  < 5
                , aeson                      >= 0.8
                , bytestring
+               , file-embed                 >= 0.0.10
   default-language:
     Haskell2010
   default-extensions: BangPatterns
@@ -37,10 +38,12 @@ library
 
 executable DeploymentTests
   hs-source-dirs:      src
-  main-is:             DeploymentTests.hs
+  main-is:             Main.hs
   build-depends:       base
                      , cmdargs
                      , bytestring
+                     --
+                     , DeploymentTests
   ghc-options:
     -threaded -rtsopts -with-rtsopts=-N -O2
   default-language:
