another build script test

--- a/.travis.yml
+++ b/.travis.yml
@@ -71,7 +71,8 @@ script:
 - cabal new-build -w ${HC} ${TEST} ${BENCH} all
 - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} all; fi
 # This is all part of the deployment process
-- bash .travis-prepare-release.sh
+- cd "$SRC_BASENAME/"
+- ./.travis-prepare-release.sh
 deploy:
   provider: releases
   file: test.tgz
