--- a/.travis.yml
+++ b/.travis.yml
@@ -71,8 +71,10 @@ script:
 - cabal new-build -w ${HC} ${TEST} ${BENCH} all
 - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} all; fi
 # This is all part of the deployment process
-- ls
-- ./travis-prepare-release.sh
+- pwd
+- ls -alh
+- find dist-newstyle -executable -type f
+- ./build/travis-prepare-release.sh
 deploy:
   provider: releases
   file: test.tgz
