--- a/.travis.yml
+++ b/.travis.yml
@@ -71,6 +71,7 @@ script:
 - cabal new-build -w ${HC} ${TEST} ${BENCH} all
 - if [ "x$TEST" = "x--enable-tests" ]; then cabal new-test -w ${HC} ${TEST} all; fi
 # This is all part of the deployment process
+- print $SHELL
 - pwd
 - ls -alh
 - find dist-newstyle -executable -type f
