--- a/.travis.yml
+++ b/.travis.yml
@@ -87,7 +87,7 @@ deploy:
   on:
     branch: master
     tags: true
-    #    condition: "$HC = ghc-8.2.1"
+    condition: "$HC = ghc-8.2.1"
     #      branches:
     #          only:
     #              - master
